fixed spacing and font sizes

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     background-color: #efeee7;
     color: #333333;
     font-family: Georgia,"Times New Roman",Times,serif;
+    font-size: 15.44px;
 }
 header {
     background-color: #333333;
